--- a/css/base.css
+++ b/css/base.css
@@ -3,7 +3,6 @@
 body {
 	background-color:#FFDDFF;
 }
-
 div#wrapper {
 	width: 960px;
 	margin: 0 auto;
@@ -12,4 +11,10 @@ div#contents {
 	background-color:#ffffff;
 	padding:15px;
 	border-radius:8px;
+}
+footer {
+	margin:35px 0px 0px 680px;
+}
+h1 {
+	margin:20px 0px 0px 0px;
 }
