--- a/css/base.css
+++ b/css/base.css
@@ -7,14 +7,99 @@ div#wrapper {
 	width: 960px;
 	margin: 0 auto;
 }
+header {
+	margin-top: 20px;
+}
+
+header a.logo{
+	float: left;
+}
+nav {
+	float: right;
+}
+nav li {
+	float:left;
+	background-color:#EAD9FF;
+}
+a {
+	display:block;
+	width: 117px;
+	height: 46px;
+}
 div#contents {
 	background-color:#ffffff;
 	padding:15px;
 	border-radius:8px;
+	clear: right; ;
 }
 footer {
 	margin:35px 0px 0px 680px;
 }
-h1 {
-	margin:20px 0px 0px 0px;
+.navigation {
+	position:relative;
+	margin:0 10px 5px 0px;
+	padding:0px 0px 0px 0px;
+	font:22px/1.6 Arial, Helvetica, sans-serif;
+	color:#333;
+	border:#333 solid 2px;
+	border-radius:18px;
+	background:#ead9ff;
+	box-shadow:
+		-5px -4px 0 0 #cccccc inset,
+		1px 2px 0 0 #000;
+}
+/*============================================
+menu：normal
+============================================*/
+li a.nav1 {
+	background-image: url(../images/home.png);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+li a.nav2 {
+	background-image: url(../images/aboutme.png);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+li a.nav3 {
+	background-image: url(../images/favorite.png);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+li a.nav4 {
+	background-image: url(../images/instagram.png);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+/*============================================
+menu：hover
+============================================*/
+.navigation:hover{
+	background:#f2e8ff;
+}
+li a.nav1:hover {
+	background-image: url(../images/home_hover.png);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+li a.nav2:hover {
+	background-image: url(../images/aboutme_hover.png);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+li a.nav3:hover {
+	background-image: url(../images/favorite_hover.png);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+li a.nav4:hover {
+	background-image: url(../images/instagram_hover.png);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+/*============================================
+menu：active
+============================================*/
+li.navigation.active{
+	background:#fcfcd4;
 }
