--- a/css/base.css
+++ b/css/base.css
@@ -117,3 +117,31 @@ table {
 	margin-left : 250px;
 	margin-bottom:90px;
 }
+/*============================================
+favorite
+============================================*/
+img.image_crown {
+	float: left;
+	margin-left: 100px;
+}
+h2 {
+	font-size: 20px;
+	font-weight: normal;
+	line-height: 30px;
+	letter-spacing:5px;
+	text-indent: -30px;
+	margin-left:250px;
+}
+p.testimonials {
+	clear: left;
+	font-size: 16px;
+	line-height: 26px;
+	letter-spacing:1px;
+	margin-left:100px;
+	margin-top: 30px;
+	margin-bottom: 90px;
+}
+img.comics {
+	float: right;
+	margin-right:80px;
+}
