--- a/css/base.css
+++ b/css/base.css
@@ -145,3 +145,10 @@ img.comics {
 	float: right;
 	margin-right:80px;
 }
+/*=====================================
+インスタグラム
+=====================================*/
+#instafeed a img {
+	width:200px; height:200px;
+	margin:12px
+}
