--- a/css/base.css
+++ b/css/base.css
@@ -129,6 +129,7 @@ img.image_crown {
 }
 h2 {
 	font-size: 20px;
+	font-family: "MS PGothic", "Osaka", Arial, sans-serif;
 	font-weight: normal;
 	line-height: 30px;
 	letter-spacing:5px;
